--- a/static/lecture561/lecture00.Rmd
+++ b/static/lecture561/lecture00.Rmd
@@ -704,10 +704,10 @@ Distribution | CDF | P(X=x),f(x) | $\mu$ | $EX^2$ | Var | MGF | M'(t) | M''(t) |
 ---|---|---|---|---|---|---|---|---|---
 Bern(p) | | $p^xq^{1-x},x\in\{1,0\}$ | $p$ | $p$ | $pq$ | $pe^t+q$
 \hline
-Bin(n,p) & $I_{1-p}(n-x,x+1)$ & $ \binom{n}{x}p^x q^{n-x}; x \in \{0,1..n\}$ & $np$ & $\mu(\mu+q)$ & $q\mu$ & $(pe^t+q)^n$
+Bin(n,p) | $I_{1-p}(n-x,x+1)$ | $ \binom{n}{x}p^x q^{n-x}; x \in \{0,1..n\}$ | $np$ | $\mu(\mu+q)$ | $q\mu$ | $(pe^t+q)^n$
 \hline
-$\Geom(p)$ & $1-q^x    $ & $pq^{x-1},x\in 1,2,..$ & $\frac1p  $ & $\frac{p+2q}{p^2} $ & $\frac{q}{p^2}$ & $\frac{pe^t}{1-qe^t},t<-\ln{q}$ \\
-           & $1-q^{x+1}$ & $pq^x,x\in 0,1,..    $ & $\frac{q}p$ & $\frac{q^2+q}{p^2}$ & $\frac{q}{p^2}$ & $\frac{p}{1-qe^t}, qe^t<1     $ & $\frac{pqe^t}{(1-qe^t)^2}$ & $\frac{2pqe^t}{(1-qe^t)^3}-M'(t)$ \\
+Geom(p) | $1-q^x    $ | $pq^{x-1},x\in 1,2,..$ | $\frac1p  $ | $\frac{p+2q}{p^2} $ | $\frac{q}{p^2}$ | $\frac{pe^t}{1-qe^t},t<-\ln{q}$  
+           | $1-q^{x+1}$ | $pq^x,x\in 0,1,..    $ | $\frac{q}p$ | $\frac{q^2+q}{p^2}$ | $\frac{q}{p^2}$ | $\frac{p}{1-qe^t}, qe^t<1     $ | $\frac{pqe^t}{(1-qe^t)^2}$ | $\frac{2pqe^t}{(1-qe^t)^3}-M'(t)$ 
 \hline
 
 $\NBin(r,p)$ & $ $ & $\binom{x-1}{r-1}p^rq^{x-r},x\in r,r+1..$ & $\frac{r}p $ & $ $ & $\frac{rq}{p^2}$ & $(\frac{pe^t}{1-qe^t})^r$\\
