--- a/docs/lecture561/lecture00.Rmd
+++ b/docs/lecture561/lecture00.Rmd
@@ -700,16 +700,16 @@ $\mu_n'=E(X^n),\quad note\quad \mu_1'=\mu$
 ### 3 Families of Distributions
 
 
-Distribution | CDF | P(X=x),f(x) | $\mu$ | $EX^2$ | Var | MGF | M'(t) | M''(t) | $M^n(t)$
+Distribution | CDF | P(X=x),f(x) | μ | $\mathbf{EX^2}$ | Var | MGF | M'(t) | M''(t) | $\mathbf{M^n(t)}$
 ---|---|---|---|---|---|---|---|---|---
-Bern(p) | | $p^xq^{1-x},x\in\{1,0\}$ | $p$ | $p$ | $pq$ | $pe^t+q$
-Binom(n,p) | $I_{1-p}(n-x,x+1)$ | $\binom{n}{x}p^x q^{n-x}; x \in \{0,1..n\}$ | $np$ | $\mu(\mu+q)$ | $q\mu$ | $(pe^t+q)^n$
-Geom(p) | $1-q^x$ | $pq^{x-1},x\in 1,2,..$ | $\frac1p$ | $\frac{p+2q}{p^2}$ | $\frac{q}{p^2}$ | $\frac{pe^t}{1-qe^t},t<-\ln{q}$  
-Geom2(p) | $1-q^{x+1}$ | $pq^x,x\in 0,1,..$ | $\frac{q}p$ | $\frac{q^2+q}{p^2}$ | $\frac{q}{p^2}$ | $\frac{p}{1-qe^t}, qe^t<1$ | $\frac{pqe^t}{(1-qe^t)^2}$ | $\frac{2pqe^t}{(1-qe^t)^3}-M'(t)$ 
+$Bern(p)$ | | $p^xq^{1-x},x\in\{1,0\}$ | $p$ | $p$ | $pq$ | $pe^t+q$
+$Binom(n,p)$ | $I_{1-p}(n-x,x+1)$ | $\binom{n}{x}p^x q^{n-x}; x \in \{0,1..n\}$ | $np$ | $\mu(\mu+q)$ | $q\mu$ | $(pe^t+q)^n$
+$Geom(p)$ | $1-q^x$ | $pq^{x-1},x\in 1,2,..$ | $\frac1p$ | $\frac{p+2q}{p^2}$ | $\frac{q}{p^2}$ | $\frac{pe^t}{1-qe^t},t<-\ln{q}$  
+$Geom2(p)$ | $1-q^{x+1}$ | $pq^x,x\in 0,1,..$ | $\frac{q}p$ | $\frac{q^2+q}{p^2}$ | $\frac{q}{p^2}$ | $\frac{p}{1-qe^t}, qe^t<1$ | $\frac{pqe^t}{(1-qe^t)^2}$ | $\frac{2pqe^t}{(1-qe^t)^3}-M'(t)$ 
 $NBin(r,p)$ | $ $ | $\binom{x-1}{r-1}p^rq^{x-r},x\in r,r+1..$ | $\frac{r}p$ | $ $ | $\frac{rq}{p^2}$ | $(\frac{pe^t}{1-qe^t})^r$
-             | $ $ | $\binom{x+r-1}{r-1}p^rq^x, x \in 0,1..$ | $\frac{rq}p$ | $ $ | $\frac{rq}{p^2}$ | $(\frac{p}{1-qe^t})^r, qe^t<1$
-$Hypergeometric(N,m,k)$ | $ $ | $\frac{\binom{m}{x}\binom{N-m}{k-x}}{\binom{N}{k}}$ | $\frac{km}{N}$ | $ $ | $\mu\frac{(N-m)(N-k)}{N(N-1)}$ 
-$Hypergeometric(w,b,k)$ | $ $ | $\frac{\binom{w}{x}\binom{b}{k-x}}{\binom{w+b}{k}}$ | $\frac{kw}{w+b}$ | $ $ | $\mu\frac{b(w+b-k)}{(w+b)(w+b-1)}$   
+$NBin2(r,p)$ | $ $ | $\binom{x+r-1}{r-1}p^rq^x, x \in 0,1..$ | $\frac{rq}p$ | $ $ | $\frac{rq}{p^2}$ | $(\frac{p}{1-qe^t})^r, qe^t<1$
+$Hgeom(N,m,k)$ | $ $ | $\frac{\binom{m}{x}\binom{N-m}{k-x}}{\binom{N}{k}}$ | $\frac{km}{N}$ | $ $ | $\mu\frac{(N-m)(N-k)}{N(N-1)}$ 
+$Hgeom(w,b,k)$ | $ $ | $\frac{\binom{w}{x}\binom{b}{k-x}}{\binom{w+b}{k}}$ | $\frac{kw}{w+b}$ | $ $ | $\mu\frac{b(w+b-k)}{(w+b)(w+b-1)}$   
 $Pois(\mu)$ | $e^{-\mu}\sum_{i=0}^x\frac{\mu^i}{i!}$ | $\frac{\mu^x}{x!}e^{-\mu},x \in 0,1..$ | $\mu$ | $\mu^2+\mu$ | $\mu$ | $e^{\mu(e^t-1)}$ | $\mu e^tM(t)$ | $\mu e^t(1+\mu e^t)M(t)$ 
 $Unif(n)$ |  | $ \frac{1}n,x \in 1,2..n$ | $\frac{n+1}2$ | $\frac{(n+1)(2n+1)}{6}$ | $\frac{(n^2-1)}{12}$ |  $\frac{\sum_{i=1}^n{e^{ti}}}n$
 $Unif(a,b)$ | $\frac{x-a}{b-a}$ | $ \frac{1}{b-a},x \in(a,b)$ | $\frac{a+b}{2}$ | $ $| $\frac{(b-a)^2}{12}$ |  $\frac{e^{tb}-e^{ta}}{t(b-a)}$
