--- a/docs/lecture561/lecture00.Rmd
+++ b/docs/lecture561/lecture00.Rmd
@@ -711,8 +711,8 @@ $NBin2(r,p)$ | $ $ | $\binom{x+r-1}{r-1}p^rq^x, x \in 0,1..$ | $\frac{rq}p$ | $ 
 $Hgeom(N,m,k)$ | $ $ | $\frac{\binom{m}{x}\binom{N-m}{k-x}}{\binom{N}{k}}$ | $\frac{km}{N}$ | $ $ | $\mu\frac{(N-m)(N-k)}{N(N-1)}$ 
 $Hgeom(w,b,k)$ | $ $ | $\frac{\binom{w}{x}\binom{b}{k-x}}{\binom{w+b}{k}}$ | $\frac{kw}{w+b}$ | $ $ | $\mu\frac{b(w+b-k)}{(w+b)(w+b-1)}$   
 $Pois(\mu)$ | $e^{-\mu}\sum_{i=0}^x\frac{\mu^i}{i!}$ | $\frac{\mu^x}{x!}e^{-\mu},x \in 0,1..$ | $\mu$ | $\mu^2+\mu$ | $\mu$ | $e^{\mu(e^t-1)}$ | $\mu e^tM(t)$ | $\mu e^t(1+\mu e^t)M(t)$ 
-$Unif(n)$ |  | $ \frac{1}n,x \in 1,2..n$ | $\frac{n+1}2$ | $\frac{(n+1)(2n+1)}{6}$ | $\frac{(n^2-1)}{12}$ |  $\frac{\sum_{i=1}^n{e^{ti}}}n$
-$Unif(a,b)$ | $\frac{x-a}{b-a}$ | $ \frac{1}{b-a},x \in(a,b)$ | $\frac{a+b}{2}$ | $ $| $\frac{(b-a)^2}{12}$ |  $\frac{e^{tb}-e^{ta}}{t(b-a)}$
+$Unif(n)$ |  | $\frac{1}n,x \in 1,2..n$ | $\frac{n+1}2$ | $\frac{(n+1)(2n+1)}{6}$ | $\frac{(n^2-1)}{12}$ |  $\frac{\sum_{i=1}^n{e^{ti}}}n$
+$Unif(a,b)$ | $\frac{x-a}{b-a}$ | $\frac{1}{b-a},x \in(a,b)$ | $\frac{a+b}{2}$ | $ $| $\frac{(b-a)^2}{12}$ |  $\frac{e^{tb}-e^{ta}}{t(b-a)}$
 $N(\mu,\sigma^2)$ |  | $\frac{1}{\sigma\sqrt{2\pi}} e^{-\frac{(x-\mu)^2}{2\sigma^2}}$ | $\mu$ | $\mu^2+\sigma^2$ | $\sigma^2$ | $e^{\mu t +\frac{\sigma^2t^2}2}$ | $(\mu+\sigma^2t)M(t)$ | $[(\mu+\sigma^2t)^2+\sigma^2]M(t)$
 $N(0, 1)$ |  | $\frac{1}{\sqrt{2\pi}}e^{-\frac{x^2}2}$ | $0$ | $1$ | $1$ | $e^{\frac{t^2}2}$ 
 $\mathcal{LN}(\mu,\sigma^2)$ |  | $\frac{1}{x\sigma \sqrt{2\pi}}e^{\frac{-(\ln x-\mu)^2}{2\sigma^2}}$ | $e^{\mu+\frac{\sigma^2}2}$ | $e^{2\mu+2\sigma^2}$ | $\theta^2(e^{\sigma^2}-1)$ | $\times$
@@ -720,8 +720,8 @@ $Cauchy(\theta,\sigma^2)$ |  | $\frac{1}{\pi\sigma}\frac1{1+(\frac{x-\theta}{\si
 $DExpo(\mu,\sigma^2)$ |  | $\frac{1}{2\pi\sigma} e^{-|\frac{x-\mu}{\sigma}|}$ | $\mu$ | $\mu^2+2\sigma^2$ | $2\sigma^2$ | $\frac{e^{\mu t}}{1-\sigma^2t^2}$ 
 $Expo(\lambda)$ | $1-e^{-\lambda x}$ | $\lambda e^{-\lambda x},x \in (0,\infty)$ | $\frac{1}{\lambda}$ | $ $ | $\frac{1}{\lambda^2}$ | $\frac{\lambda}{\lambda - t}, t < \lambda$
 $Expo(\beta)$ |  | $\frac1{\beta} e^{-\frac{x}\beta}$ | $\beta$ | $ $ | $\beta^2$ | $\frac{1}{1-\beta t}$ | $\beta(1-\beta t)^{-2}$ | $2\beta^2(1-\beta t)^{-3}$
-$Gam(a, \lambda)$ | $ $ | $\frac{\lambda^a}{\Gamma(a)}x^{a-1}e^{-\lambda x},x \in (0,\infty)$ | $\frac{a}{\lambda}$  | $\frac{a}{\lambda^2}$ | $\left(\frac{\lambda}{\lambda - t}\right)^a, t < \lambda$
-$Gam(\alpha,\beta)$ | $ $ | $\frac{1}{\Gamma(a)\beta^{\alpha}}x^{a-1}e^{-x/\beta}$ | $\alpha\beta$  | $\alpha\beta^2$ | $\left(\frac{1}{1-\beta t}\right)^a, t <\frac1\beta$
+$Gam(a, \lambda)$ | $ $ | $\frac{\lambda^a}{\Gamma(a)}x^{a-1}e^{-\lambda x},x \in (0,\infty)$ | $\frac{a}{\lambda}$ | | $\frac{a}{\lambda^2}$ | $(\frac{\lambda}{\lambda - t})^a, t < \lambda$
+$Gam(\alpha,\beta)$ | $ $ | $\frac{1}{\Gamma(a)\beta^{\alpha}}x^{a-1}e^{-x/\beta}$ | $\alpha\beta$  |   | $\alpha\beta^2$ | $(\frac{1}{1-\beta t})^a, t <\frac1\beta$
 $Beta(a, b)$ | $ $ | $\frac{\Gamma(a+b)}{\Gamma(a)\Gamma(b)}x^{a-1}(1-x)^{b-1}$ | $\frac{a}{a+b}$ | $ $  | $\frac{\mu(1-\mu)}{(a+b+1)}$ | $ $ | $ $ | $ $ | $\frac{\Gamma(\alpha+n)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)\Gamma(\alpha)}$  
 $B(\alpha,\beta)=$ | $ $ | $\frac{\Gamma(\alpha)\Gamma(\beta)}{\Gamma(\alpha+\beta)},x\in(0,1)$ | $ $  | $\frac{a(a+1)}{(a+b)(a+b+1)}$ | $\frac{ab}{(a+b)^2(a+b+1)}$ 
 $\chi_p^2$ | $ $ | $\frac{1}{2^{p/2}\Gamma(p/2)}x^{p/2-1}e^{-x/2}$ | $p$ | $2p+p^2$ | $2p$ | $(1-2t)^{-p/2}, t<\frac12$
